landing page feedback

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -47,7 +47,7 @@
 
         <!--Navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark elegant-color-dark fixed-top">
-            <div class="container">
+            <div data-spy="affix" id="dot-nav" class="container">
                 <a class="navbar-brand" href="#">Navbar</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -57,9 +57,9 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                         </li>
-                        <li class="nav-item">
+<!--                        <li class="nav-item">
                             <a class="nav-link" href="#">About Us</a>
-                        </li>
+                        </li>-->
                         <li class="nav-item">
                             <a class="nav-link" href="#">Courses</a>
                         </li>
@@ -95,7 +95,7 @@
      <!--Main container-->
     <div class="container">
 
-        <div class="divider-new pt-5">
+<!--        <div class="divider-new pt-5">
             <h2 class="h2-responsive wow fadeIn" data-wow-delay="0.2s">About us</h2>
         </div>
 
@@ -103,7 +103,7 @@
         <section id="about" class="text-center wow fadeIn" data-wow-delay="0.2s">
 
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit explicabo assumenda eligendi ex exercitationem harum deleniti quaerat beatae ducimus dolor voluptates magnam, reiciendis pariatur culpa tempore quibusdam quidem, saepe eius.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit explicabo assumenda eligendi ex exercitationem harum deleniti quaerat beatae ducimus dolor voluptates magnam, reiciendis pariatur culpa tempore quibusdam quidem, saepe eius.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit explicabo assumenda eligendi ex exercitationem harum deleniti quaerat beatae ducimus dolor voluptates magnam, reiciendis pariatur culpa tempore quibusdam quidem, saepe eius.</p>-->
 
         </section>
         <!--Section: About-->
@@ -112,7 +112,7 @@
             <h2 class="h2-responsive wow fadeIn">Courses</h2>
         </div>
 
-        Section: Best features
+        <!--Section: Best features-->
         <section id="best-features">
 
             <div class="row pt-3">
@@ -306,7 +306,7 @@
         <!--Copyright-->
         <div class="footer-copyright">
             <div class="container-fluid">
-                © 2015 Copyright: <a href="https://www.MDBootstrap.com"> MDBootstrap.com </a>
+                © 2017 Copyright: <a href="#"> Domain Name Yet to be decided.</a>
 
             </div>
         </div>
