minor bug fixes in landing page

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -55,7 +55,7 @@ height: 200px;
 
         <!--Navbar-->
         <nav class=" navbar navbar-expand-lg navbar-dark elegant-color-dark fixed-top">
-            <div data-spy="affix" id="dot-nav" class="container">
+            <div class="container">
                 <a class="navbar-brand" href="#">Navbar</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -78,7 +78,7 @@ height: 200px;
                         
                     </ul>
                     <form class="form-inline">
-                        <button type="submit" class="btn btn-outline-warning btn-rounded waves-effect">Support</button>
+                        <button type="submit" class="btn btn-outline-warning btn-raised btn-sm btn-rounded waves-effect">Support</button>
                     </form>
                 </div>
             </div>
@@ -112,8 +112,8 @@ height: 200px;
             <p>Hi, I'm a Professional Software Developer and a passionate learner of new Technology
                 and building software applications. I've developed numerous Android Mobile apps
                 using JAVA in Android Studio, Web Applications in Net Beans using HTML5, Material Design Bootstrap CSS, Angular JS 
-                etc. and Google Firebase and other Google APIs such as Google Maps,Push Notifications, Geofencing etc . 
-                and I'm here to help you have the best E-learning experience and become a Pro at Developing Mobile and Web Apps.
+                etc. with Google Firebase and other Google APIs such as Google Maps,Push Notifications, Geofencing etc . 
+                and I'm here to help you have the best E-learning experience at no cost just to make best lesson available for everyone and become a Pro at Developing Mobile and Web Apps.
                 So, quickly pick the course below and start your E-learning journey to become a Professional Software Developer.</p>
 
         </section>
