--- a/public_html/index.html
+++ b/public_html/index.html
@@ -26,7 +26,7 @@
             color: #fff;
         }
         .intro-1 {
-            background: url("images/background.png")no-repeat center center;
+            background: url("/images/background.png")no-repeat center center;
             background-size: cover;
         }
         .navbar .btn-group .dropdown-menu a:hover {
